--- a/index.html
+++ b/index.html
@@ -1415,5 +1415,5 @@ function decryptData(data) {
 document.write(decryptData(finalData_combined));
 })();
 </script>
-<footer><a href="https://whatsapp.com/channel/0029VbB5rqQIiRokILC0p23M" style="display:inline-block; margin-top:20px; padding:10px 20px; background-color:#25D366; color:white; text-decoration:none; border-radius:5px; font-weight:bold; font-family:sans-serif;" target="_blank">Join My WhatsApp Channel</a></footer></body>
+<footer><p>Developed by Moazzam-Khan</p><a href="https://whatsapp.com/channel/0029VbB5rqQIiRokILC0p23M" style="display:inline-block; margin-top:20px; padding:10px 20px; background-color:#25D366; color:white; text-decoration:none; border-radius:5px; font-weight:bold; font-family:sans-serif;" target="_blank">Join My WhatsApp Channel</a></footer></body>
 </html>
